# youtube-downloader

./: .codecov.yml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TEST_COVERAGE_SUMMARY.md  TEST_SUITE_SUMMARY.txt  YT_Audio.py  YT_Video.py  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: CICD_SETUP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  README.md  TESTING.md  WORKFLOWS.md
legacy/: README.md  YT_Audio.py
tests/: conftest.py  test_audio_downloader.py  test_base_gui.py  test_config.py  test_error_handling.py  test_integration.py  test_video_downloader.py
youtube_downloader/: __init__.py  __main__.py  audio_downloader.py  base_gui.py  config.py  constants.py  user_config.py  video_downloader.py
